Improve stability, security, and UX across all layers
- Redis Pub/Sub to List queue migration for reliable message delivery
- SSH password AES-256-GCM encryption with auto-migration
- Agent concurrency control via Semaphore (max-concurrent-jobs)
- Rate limiting (bucket4j), audit logging (AOP), MDC request tracking
- SSRF prevention, CRLF header injection blocking, JWT hardening
- Bulk job enable/disable API and UI with checkbox multi-select
- CSV export for job results, Error Boundary, lazy loading
- DB performance indexes (V21), SWR polling optimization
- Vite vendor chunk splitting, source map disabled for production
- ARIA accessibility labels, .gitignore cleanup (remove target/)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>